generated-tests/tests/snapshots/tsx/generated_tests__tsx__test_generated_template_type.snap
---
source: generated-tests/tests/tsx.rs
expression: snapshot_content
---
Source Code:
const value31: `hello ${string}` = 'hello world';

AST:
(program
  (lexical_declaration
    (variable_declarator
      (identifier value31)
      (type_annotation
        (template_literal_type
          (string_fragment)
          (template_type
            (predefined_type)
          )
        )
      )
      (string
        (string_fragment)
      )
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition {
            name: "value31",
            line_number: 1,
            definition_type: VariableDefinition,
            scope: None,
        },
    ],
    dependencies: [],
    analysis_metadata: AnalysisMetadata {
        language: "TSX",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
