generated-tests/tests/snapshots/tsx/generated_tests__tsx__test_generated_throw_statement.snap
---
source: generated-tests/tests/tsx.rs
expression: snapshot_content
---
Source Code:
throw new Error(error);

AST:
(program
  (throw_statement
    (new_expression
      (identifier Error)
      (arguments
        (identifier error)
      )
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [],
    dependencies: [],
    usage: [
        SerializableUsage {
            name: "Error",
            kind: Identifier,
            scope: None,
            start_line: 1,
            start_column: 11,
            end_line: 1,
            end_column: 16,
        },
        SerializableUsage {
            name: "error",
            kind: Identifier,
            scope: None,
            start_line: 1,
            start_column: 17,
            end_line: 1,
            end_column: 22,
        },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "TSX",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
